[Bài tập] Tạo form sở Thích KH

--- a/5_HTML_Form_Table/Bai_Tap/Tạo_form_don_gian.html
+++ b/5_HTML_Form_Table/Bai_Tap/Tạo_form_don_gian.html
@@ -15,8 +15,8 @@
                 <td style="width: 350px"><input type="text" id="fullname" name="fullname"></td>
             </tr>
             <tr style="color: blue">
-                <td style="width: 150px; text-align: right"><label for="email">Email:</label></td>
-                <td style="width: 250px"><input type="text" id="email" name="email"></td>
+                <td style="width: 150px; text-align: right"><label for="email">email:</label></td>
+                <td style="width: 350px"><input type="text" id="email" name="email"></td>
             </tr>
             <tr style="color: blue">
                 <td style="width: 150px; text-align: right "><label for="email">Sở Thích:</label></td>
