--- a/5_HTML_Form_Table/Bai_Tap/Form_Dang_Ki_Hoc_Vien.html
+++ b/5_HTML_Form_Table/Bai_Tap/Form_Dang_Ki_Hoc_Vien.html
@@ -8,7 +8,7 @@
 <form action="registration.php" method="post">
     <div style=" border-style: groove ;width: 600px;height: 430px; background-color: khaki">
         <h2 style="color: blue; margin: 5px 5px 5px 5px; background-color: skyblue">ĐĂNG KÝ HỌC VIÊN</h2>
-        <table style="border-spacing: 15px">
+        <table style="border-spacing: 15px ;" >
             <tr>
                 <td style="width: 100px; text-align: left;color: blue"><label for="fullname">Họ Và Tên</label></td>
                 <td style="width: 350px"><input style="height: 18px ;width: 230px;" type="text" id="fullname"
