Giới Thiệu Về JaVaScript

--- a/6_Tong_quan_JavaScript/Thuc_hanh/Nhung_JavaScript.html
+++ b/6_Tong_quan_JavaScript/Thuc_hanh/Nhung_JavaScript.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Nhúng JavaScript</title>
 </head>
 <body>
-$END$
+<button  type="button" onclick="alert('Xin chào!');">Click Me!</button>
+<a href="Nhung_JavaScript.js"></a>
 </body>
 </html>
