--- a/10_Cau_truc_lap/Bai_tap/hien_thi_so_nguyen_to.html
+++ b/10_Cau_truc_lap/Bai_tap/hien_thi_so_nguyen_to.html
@@ -10,26 +10,31 @@
 <script>
  //1,2,3,5,7,9,11,13,17,19
 
- let numbers = parseInt(prompt("vui lòng nhập số lượng sô nguyên tố muốn in ra :")) ;
 
- let count = kiemtrasonguyento(numbers) ;
- if (count){
-     alert("Đây là số nguyên tố")
- }else {
-     alert("Đây không phải là số nguyên tố")
- }
- function kiemtrasonguyento(numbers) {
+     let numbers = parseInt(prompt("Bạn muốn hiển thị bao nhiêu số nguyên tố đầu tiên:"));
+     function check_prime (number) {
      let check = true;
-     for (let N = 2; N < numbers; N++) {
-         console.log(N)
-         if (numbers % N === 0) {
-             check = false;
-             break;
-         }
-
-     }
+     let i;
+     for (i = 2; i <= Math.sqrt(number); i++){
+     if (number % i === 0 && number > 2) {
+     check = false;
+ }
+ }
      return check;
  }
-
+     function list_prime (n) {
+     let N = 2;
+     let count = 0;
+     while (count < n) {
+     if (check_prime(N)) {
+     document.write(N);
+     document.write("<br>");
+     count++;
+ }
+     N++;
+ }
+ }
+     list_prime(numbers);
 </script>
+
 </html>
