--- a/16_17_OOP_Lap_Trinh_Huong_Doi_Tuong/Thuc_hanh/lop_mo_phong_hoat_dong_den_pin.html
+++ b/16_17_OOP_Lap_Trinh_Huong_Doi_Tuong/Thuc_hanh/lop_mo_phong_hoat_dong_den_pin.html
@@ -2,9 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>[Thực hành] Xây dựng lớp mô phỏng sự hoạt động của đèn pin</title>
 </head>
 <body>
 
 </body>
+<script>
+    class Battery {
+        constructor(energy) {
+            this.energy = energy;
+        }
+
+        getEnergy() {
+            return this.energy;
+        }
+        setEnergy(energy) {
+            this.energy = energy;
+        }
+        decreaseEnergy() {
+            if (this.energy > 0) {
+                this.energy--;
+            }
+        }
+
+    }
+    let FlashLamp = function () {
+
+        this.setBattery = function (battery) {
+            this.battery = battery;
+        };
+
+        this.getBatteryInfo = function () {
+            return this.battery.getEnergy();
+        };
+
+        this.light = function () {
+            if(this.status){
+
+                alert("Lighting");
+
+            } else {
+                alert("Not lighting");
+            }
+        };
+
+        this.turnOn = function () {
+            this.status = true;
+         this.battery.decreaseEnergy();
+        };
+
+        this.turnOff = function () {
+            this.status = false;
+        }
+    };
+
+    let battery = new Battery();
+    battery.setEnergy(100);
+
+    let flashLamp = new FlashLamp();
+    flashLamp.setBattery(battery);
+
+    document.write("Battery info:" + flashLamp.getBatteryInfo() + "<br/>");
+    flashLamp.light();
+
+    document.write("Turn on<br/>")
+    flashLamp.turnOn();
+    flashLamp.light();
+    document.write("Battery info:" + flashLamp.getBatteryInfo() + "<br/>");
+
+    document.write("Turn off<br/>")
+    flashLamp.turnOff();
+    flashLamp.light();
+
+    document.write("Turn on<br/>")
+    flashLamp.turnOn();
+    flashLamp.light();
+    document.write("Battery info:" + flashLamp.getBatteryInfo() + "<br/>");
+
+</script>
+
 </html>
